<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

    <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_script" />

    <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_icon"
            android:ellipsize="marquee"
            android:maxLength="8"
            android:singleLine="true"
            android:text="@string/script_name"
            android:textSize="20sp" />

    <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_toEndOf="@+id/iv_icon"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/script_version"
            android:textSize="16sp" />

    <Button
            android:id="@+id/btn_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/action_download" />

    <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/action_update"
            android:visibility="gone" />

    <Button
            android:id="@+id/btn_redownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/action_redownload"
            android:visibility="gone" />

    <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_icon"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/iv_icon"
            android:text="@string/script_desc"
            android:textColor="#AAA" />

</RelativeLayout>