<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AboutActivity">

    <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher" />

    <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/app_version_name" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.rainman.asf.view.AboutItem
                    android:id="@+id/info_system_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/system_version" />

            <com.rainman.asf.view.AboutItem
                    android:id="@+id/info_cpu_abi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/cpu_abi" />

            <com.rainman.asf.view.AboutItem
                    android:id="@+id/info_root_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/root_status" />

            <com.rainman.asf.view.AboutItem
                    android:id="@+id/info_wifi_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/wifi_addr" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
