<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@drawable/background_script"
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/iv_icon"
            android:src="@drawable/ic_script"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_centerVertical="true"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    <RelativeLayout
            android:layout_toEndOf="@+id/iv_icon"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_name"
                android:text="@string/script_name"
                android:textSize="20sp"
                android:maxLength="8"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_version"
                android:text="@string/script_version"
                android:textSize="12sp"
                android:singleLine="true"
                android:layout_toEndOf="@+id/tv_name"
                android:layout_alignBottom="@+id/tv_name"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_status"
                android:text="•"
                android:textSize="16sp"
                android:layout_below="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_runtime"
                android:text="@string/last_run_time"
                android:textColor="#BBB"
                android:textSize="16sp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:layout_below="@+id/tv_name"
                android:layout_toEndOf="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <ImageView
            android:id="@+id/iv_scheduler"
            android:src="@drawable/ic_script_scheduler"
            android:background="?selectableItemBackground"
            android:layout_toStartOf="@+id/iv_setting"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

    <ImageView
            android:id="@+id/iv_setting"
            android:src="@drawable/ic_script_setting"
            android:background="?selectableItemBackground"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

</RelativeLayout>