<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SchedulerActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:timePickerMode="spinner"
                tools:targetApi="lollipop" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRepeatClick"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="UsingOnClickInXml">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat"
                    android:textColor="#000"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_repeat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="16sp" />

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_chevron_right_black_24dp"
                    tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onScriptClick"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="UsingOnClickInXml">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/script"
                    android:textColor="#000"
                    android:textSize="20sp" />

            <TextView
                    android:id="@+id/tv_script"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="16sp" />

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_chevron_right_black_24dp"
                    tools:ignore="ContentDescription" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onPrivateConfigClick"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="UsingOnClickInXml">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_private_config"
                    android:textColor="#000"
                    android:textSize="20sp" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end" />

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_private_config"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:clickable="false" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onShowPrivateConfigClick"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="UsingOnClickInXml">

            <TextView
                    android:id="@+id/tv_show_private_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_private_config"
                    android:textColor="#CCC"
                    android:textSize="20sp" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC" />

    </LinearLayout>

</ScrollView>